# RS1Labs

./: CMakeLists.txt  README.md
launch/: ekf_lab3.yaml  ekf_launch_lab3.launch.py  frames_2024-08-31_10.15.20.gv  office.launch.py  spot_gazebo_3.launch.py  spot_gazebo_two.launch.py  spot_mining2.launch.py
resources/: spot_map1.pgm  spot_map1.yaml  turtle_map.pgm  turtle_map.yaml
src/: cylinder_detector.cpp  image_processor.cpp  lab2.cpp  lab3.cpp  lab5.cpp  rmse_calculator.cpp  scan_localiser.cpp
worlds/: mining.world  mining2.world  spot_gazebo_two.world
